--- a/ReadMe
+++ b/ReadMe
@@ -2,7 +2,8 @@
 Setup Instruction for Bidirectional LSTM model based sentence level relation extraction 
 
 
-Please follow original github link(https://github.com/UKPLab/emnlp2017-relation-extraction/blob/master/README.md)  for any confusion as the setup is same.
+Please follow original github link(https://github.com/UKPLab/emnlp2017-relation-extraction/blob/master/README.md)  for any confusion 
+as the setup is same.
 
 # Source for the dataset:
 
@@ -10,10 +11,10 @@ https://www.informatik.tu-darmstadt.de/ukp/research_6/data/lexical_resources/wik
 
 Folder Structure:
 
-relation_extraction/core				------Models for joint relation extraction
+relation_extraction/core			------Models for joint relation extraction
 relation_extraction/evaluation			------Evaluation metrics
-resources/	Necessary resources			------resources folder
-data/curves/							------The precision-recall curves for each model on the held out data 
+resources/	Necessary resources		------resources folder
+data/curves/					------The precision-recall curves for each model on the held out data 
 
 
 
@@ -29,19 +30,20 @@ Setup:
 
 	pip3 install -r requirements.txt
 
-3.	Set the Keras (deep learning library) backend to TensorFlow with the following command:
+3. Set the Keras (deep learning library) backend to TensorFlow with the following command:
 	export KERAS_BACKEND=tensorflow
 
-4.	Download the data from :				    https://www.informatik.tu-darmstadt.de/ukp/research_6/data/lexical_resources/wikipedia_wikidata_relations/
+4. Download the data from :				    
+https://www.informatik.tu-darmstadt.de/ukp/research_6/data/lexical_resources/wikipedia_wikidata_relations/
 
+Extract the archive inside emnlp2017-relation-extraction/data/wikipedia-wikidata/
 
-	Extract the archive inside emnlp2017-relation-extraction/data/wikipedia-wikidata/
-	The data was preprocessed using Stanford Core NLP 3.7.0 models. See stanford_tag_dataset.py for more information.
+The data was preprocessed using Stanford Core NLP 3.7.0 models. See stanford_tag_dataset.py for more information.
 	
 	
 
-5.	Download the GloVe embeddings, glove.6B.zip (https://nlp.stanford.edu/projects/glove/) and put them into the folder 	
-	emnlp2017-relation-extraction/resources/glove/. 	
+5. Download the GloVe embeddings, glove.6B.zip (https://nlp.stanford.edu/projects/glove/) and 
+put them into the folder emnlp2017-relation-extraction/resources/glove/. 	
 	
     You can change the path to word embeddings in the model_params.json file if needed.
 
@@ -50,20 +52,31 @@ Setup:
 
 Run python model_train.py in emnlp2017-relation-extraction/relation_extraction/ to see the list of parameters
 
+Training:
 
-# If you put the data into the default folders you can train the ContextWeighted model with the following command for
+**********Our Implementation(Bidirectional LSTM model)
+# If you put the data into the default folders you can train the BidirectionalLSTM model with the following command for
 
-training(form relation_extraction folder):
+training(from relation_extraction folder)****:
+----------------------------------------------------------------------------------------------------------------------------------
 
-	python model_train.py model_ContextWeighted train ../data/wikipedia-wikidata/enwiki-20160501/semantic-graphs-filtered-training.02_06.json ../data/wikipedia-wikidata/enwiki-20160501/semantic-graphs-filtered-validation.02_06.json
+python model_train.py model_BidirectionalLSTM train ../data/wikipedia-wikidata/enwiki-20160501/semantic-graphs-filtered-training.02_06.json ../data/wikipedia-wikidata/enwiki-20160501/semantic-graphs-filtered-validation.02_06.json
 
 
 # Run the following command to compute the precision-recall curves:
 
 
-	python precision_recall_curves.py model_ContextWeighted ../data/wikipedia-wikidata/enwiki-20160501/semantic-graphs-filtered-held-out.02_06.json
+python precision_recall_curves.py model_BidirectionalLSTM ../data/wikipedia-wikidata/enwiki-20160501/semantic-graphs-filtered-held-out.02_06.json
 
 
+# You can also want to try the Context Weighted Model Similarly run:
+
+Training:
+
+python model_train.py model_ContextWeighted train ../data/wikipedia-wikidata/enwiki-20160501/semantic-graphs-filtered-training.02_06.json ../data/wikipedia-wikidata/enwiki-20160501/semantic-graphs-filtered-validation.02_06.json
+
+For precision-recall curve:
+python precision_recall_curves.py model_ContextWeighted ../data/wikipedia-wikidata/enwiki-20160501/semantic-graphs-filtered-held-out.02_06.json
 
 # Requirements:
 	Python 3.6
